--- a/view/frontend/layout/customer_account.xml
+++ b/view/frontend/layout/customer_account.xml
@@ -2,12 +2,22 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceBlock name="customer_account_navigation">
-            <block class="Magento\Framework\View\Element\Html\Link\Current" name="customer-account-navigation-payline-wallet-link">
+            <block class="Magento\Customer\Block\Account\SortLinkInterface" ifconfig="payment/payline_web_payment_cpt/wallet_enabled" name="customer-account-navigation-payline-wallet-link">
                 <arguments>
                     <argument name="path" xsi:type="string">payline/customer/wallet</argument>
                     <argument name="label" xsi:type="string">My Wallet</argument>
+                    <argument name="sortOrder" xsi:type="number">10</argument>
                 </arguments>
             </block>
         </referenceBlock>
+
+
+<!--        <block class="Magento\Customer\Block\Account\SortLinkInterface" ifconfig="newsletter/general/active" name="customer-account-navigation-newsletter-subscriptions-link">-->
+<!--            <arguments>-->
+<!--                <argument name="path" xsi:type="string">newsletter/manage</argument>-->
+<!--                <argument name="label" xsi:type="string" translate="true">Newsletter Subscriptions</argument>-->
+<!--                <argument name="sortOrder" xsi:type="number">40</argument>-->
+<!--            </arguments>-->
+<!--        </block>-->
     </body>
 </page>
