Display notification URL in backoffice

--- a/view/adminhtml/web/styles.css
+++ b/view/adminhtml/web/styles.css
@@ -7,3 +7,4 @@
 .monext-payment-section table.form-list td.value { width: 60%; }
 .log_container { overflow: auto;  padding: 5px; margin-top: 10px; font-family: "Courier New", monospace;white-space: pre;background:black; color:#2EC029}
 .log_container_config { height: 410px; width:700px}
+.complex.monext-payment-section .monext-payment-notification { margin-left: 200px;}
